Squashed commit of the following:
commit 38bcf828e8694463b96fc1536d4e0b77524c89ac
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 23:53:58 2022 +0100

    [UP] update user_params, add admin

commit 885220f53201f01637e695c12476b7bbee3ffefb
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 23:53:26 2022 +0100

    [UP] update user_params, add admin

commit 255a4f0e4ee91240a1a6a3c078cf86dd0446cc3d
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 23:42:41 2022 +0100

    [ADD] add rswag for missing route

commit ea3bbe5bbe5d433c8438bd5b08c56c67740d3789
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 22:06:38 2022 +0100

    [ADD] add spec for timer command

commit 90bb494d70570a11bdd8bbdfbf67217048ea6aa3
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 21:34:33 2022 +0100

    [UP] update swagger

commit 35d2cbf6dbd1c39ac2475c83eedd249364119d83
Merge: a40ba2a9 8f40caab
Author: Corentin ROY <72021589+roy-corentin@users.noreply.github.com>
Date:   Wed Nov 2 21:17:12 2022 +0100

    Merge pull request #31 from Le-feu-de-camp/develop-backend-timer-actions

    Develop backend timer actions

commit 8f40caab9d88b143a32630fd3e22b529cb7ad86d
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 15:19:49 2022 +0100

    [FIX] fix specs

commit 6409e9a40bd52c2383e150a603b87bc37f7c286f
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Wed Nov 2 14:03:33 2022 +0100

    [FIX] fix spec, each_hour handler, deplace reset_token function

commit a941e7edaff7b6e1e76a3698d6063346966a999d
Merge: 7c8db876 a40ba2a9
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Tue Nov 1 23:01:33 2022 +0100

    Merge branch 'develop-backend' into develop-backend-timer-actions

commit 7c8db87681110e1c0d9e48368a3dc57c0f3d175e
Author: roy-corentin <corentin.roy@epitech.eu>
Date:   Tue Nov 1 22:52:11 2022 +0100

    [FIX] fix actions and spec

commit a40ba2a92e4a1ef4fbaf33c9dd2a137d4f591aa4
Author: roy-coren
